src/objects/Related_Party__c.object
<CustomObject>
    <description>REFERRALS - Parties having a relationship with the Person Being Referred</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment</label>
        <referenceTo>Assessment__c</referenceTo>
        <relationshipLabel>Related Party</relationshipLabel>
        <relationshipName>Related_Party</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IDofPBR_FromPBS__c</fullName>
        <formula>Person_Being_Served__r.Person_Being_Referred__r.Id</formula>
        <label>IDofPBR_FromPBS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDofPBS_FromPBR__c</fullName>
        <formula>Person_Being_Referred__r.Person_Being_Served__r.Id</formula>
        <label>IDofPBS_FromPBR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paper_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This is used to determine the record to upsert in the paper form.</description>
        <externalId>true</externalId>
        <label>Paper Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Person_Being_Referred__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Being Referred</label>
        <referenceTo>Person_Being_Referred__c</referenceTo>
        <relationshipLabel>Related Party</relationshipLabel>
        <relationshipName>Related_Party</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person_Being_Served__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Being Served</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Party</relationshipLabel>
        <relationshipName>Related_Party</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_1_Type_String__c</fullName>
        <description>Do not display, only for saving data.</description>
        <label>Phone_1_Type_String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_1_Type__c</fullName>
        <label>Phone 1 Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_2_Type_String__c</fullName>
        <description>Do not display. Only used for saving data</description>
        <label>Phone_2_Type_String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_2_Type__c</fullName>
        <label>Phone 2 Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_2__c</fullName>
        <label>Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Received_FCT_services_before__c</fullName>
        <label>Received FCT services before?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Person_Being_Served_Othe__c</fullName>
        <label>Relationship to Person Being Served Othe</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Person_Being_Served__c</fullName>
        <label>Relationship to Person Being Served</label>
        <picklist>
            <picklistValues>
                <fullName>Full Sibling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adopted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half sibling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Step-sibling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_String__c</fullName>
        <description>Used in custom interface and the controller. DO NOT DISPLAY</description>
        <label>Type_String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Caregiver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family/Friends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funder Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor Co-Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician - Alternate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician - Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referring Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power of Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Representative Payee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Related Party</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Party Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Party</pluralLabel>
    <recordTypes>
        <fullName>Cambridge</fullName>
        <active>true</active>
        <label>Cambridge</label>
    </recordTypes>
    <recordTypes>
        <fullName>CareMeridian</fullName>
        <active>true</active>
        <label>CareMeridian</label>
    </recordTypes>
    <recordTypes>
        <fullName>Generic</fullName>
        <active>true</active>
        <label>Generic</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Referral_Assignment__c</fullName>
        <label>Referral Assignment</label>
    </sharingReasons>
</CustomObject>